docs-archive/apache-airflow-providers-google/19.5.0/_sources/_api/airflow/providers/google/cloud/hooks/cloud_composer/index.rst.txt
airflow.providers.google.cloud.hooks.cloud_composer
===================================================

.. py:module:: airflow.providers.google.cloud.hooks.cloud_composer


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.hooks.cloud_composer.CloudComposerHook
   airflow.providers.google.cloud.hooks.cloud_composer.CloudComposerAsyncHook


Module Contents
---------------

.. py:class:: CloudComposerHook(gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseHook`, :py:obj:`airflow.providers.google.common.hooks.operation_helpers.OperationHelper`


   Hook for Google Cloud Composer APIs.


   .. py:attribute:: client_options


   .. py:method:: get_environment_client()

      Retrieve client library object that allow access Environments service.



   .. py:method:: get_image_versions_client()

      Retrieve client library object that allow access Image Versions service.



   .. py:method:: make_composer_airflow_api_request(method, airflow_uri, path, data = None, timeout = None)

      Make a request to Cloud Composer environment's web server.

      :param method: The request method to use ('GET', 'OPTIONS', 'HEAD', 'POST', 'PUT', 'PATCH', 'DELETE').
      :param airflow_uri: The URI of the Apache Airflow Web UI hosted within this environment.
      :param path: The path to send the request.
      :param data: Dictionary, list of tuples, bytes, or file-like object to send in the body of the request.
      :param timeout: The timeout for this request.



   .. py:method:: get_operation(operation_name)


   .. py:method:: get_environment_name(project_id, region, environment_id)


   .. py:method:: get_parent(project_id, region)


   .. py:method:: create_environment(project_id, region, environment, retry = DEFAULT, timeout = None, metadata = ())

      Create a new environment.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param region: Required. The ID of the Google Cloud region that the service belongs to.
      :param environment:  The environment to create. This corresponds to the ``environment`` field on the
          ``request`` instance; if ``request`` is provided, this should not be set.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: delete_environment(project_id, region, environment_id, retry = DEFAULT, timeout = None, metadata = ())

      Delete an environment.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param region: Required. The ID of the Google Cloud region that the service belongs to.
      :param environment_id: Required. The ID of the Google Cloud environment that the service belongs to.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: get_environment(project_id, region, environment_id, retry = DEFAULT, timeout = None, metadata = ())

      Get an existing environment.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param region: Required. The ID of the Google Cloud region that the service belongs to.
      :param environment_id: Required. The ID of the Google Cloud environment that the service belongs to.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: list_environments(project_id, region, page_size = None, page_token = None, retry = DEFAULT, timeout = None, metadata = ())

      List environments.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param region: Required. The ID of the Google Cloud region that the service belongs to.
      :param page_size: The maximum number of environments to return.
      :param page_token: The next_page_token value returned from a previous List
          request, if any.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: update_environment(project_id, region, environment_id, environment, update_mask, retry = DEFAULT, timeout = None, metadata = ())

      Update an environment.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param region: Required. The ID of the Google Cloud region that the service belongs to.
      :param environment_id: Required. The ID of the Google Cloud environment that the service belongs to.
      :param environment:  A patch environment. Fields specified by the ``updateMask`` will be copied from
          the patch environment into the environment under update.

          This corresponds to the ``environment`` field on the ``request`` instance; if ``request`` is
          provided, this should not be set.
      :param update_mask:  Required. A comma-separated list of paths, relative to ``Environment``, of fields
          to update. If a dict is provided, it must be of the same form as the protobuf message
          :class:`~google.protobuf.field_mask_pb2.FieldMask`
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: list_image_versions(project_id, region, page_size = None, page_token = None, include_past_releases = False, retry = DEFAULT, timeout = None, metadata = ())

      List ImageVersions for provided location.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param region: Required. The ID of the Google Cloud region that the service belongs to.
      :param page_size: The maximum number of environments to return.
      :param page_token: The next_page_token value returned from a previous List
          request, if any.
      :param include_past_releases: Flag to include past releases
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: execute_airflow_command(project_id, region, environment_id, command, subcommand, parameters, retry = DEFAULT, timeout = None, metadata = ())

      Execute Airflow command for provided Composer environment.

      :param project_id: The ID of the Google Cloud project that the service belongs to.
      :param region: The ID of the Google Cloud region that the service belongs to.
      :param environment_id: The ID of the Google Cloud environment that the service belongs to.
      :param command: Airflow command.
      :param subcommand: Airflow subcommand.
      :param parameters: Parameters for the Airflow command/subcommand as an array of arguments. It may
          contain positional arguments like ``["my-dag-id"]``, key-value parameters like ``["--foo=bar"]``
          or ``["--foo","bar"]``, or other flags like ``["-f"]``.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: poll_airflow_command(project_id, region, environment_id, execution_id, pod, pod_namespace, next_line_number, retry = DEFAULT, timeout = None, metadata = ())

      Poll Airflow command execution result for provided Composer environment.

      :param project_id: The ID of the Google Cloud project that the service belongs to.
      :param region: The ID of the Google Cloud region that the service belongs to.
      :param environment_id: The ID of the Google Cloud environment that the service belongs to.
      :param execution_id: The unique ID of the command execution.
      :param pod: The name of the pod where the command is executed.
      :param pod_namespace: The namespace of the pod where the command is executed.
      :param next_line_number: Line number from which new logs should be fetched.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: wait_command_execution_result(project_id, region, environment_id, execution_cmd_info, retry = DEFAULT, timeout = None, metadata = (), poll_interval = 10)


   .. py:method:: trigger_dag_run(composer_airflow_uri, composer_dag_id, composer_dag_conf = None, timeout = None)

      Trigger DAG run for provided Apache Airflow Web UI hosted within Composer environment.

      :param composer_airflow_uri: The URI of the Apache Airflow Web UI hosted within Composer environment.
      :param composer_dag_id: The ID of DAG which will be triggered.
      :param composer_dag_conf: Configuration parameters for the DAG run.
      :param timeout: The timeout for this request.



   .. py:method:: get_dag_runs(composer_airflow_uri, composer_dag_id, timeout = None)

      Get the list of dag runs for provided DAG.

      :param composer_airflow_uri: The URI of the Apache Airflow Web UI hosted within Composer environment.
      :param composer_dag_id: The ID of DAG.
      :param timeout: The timeout for this request.



   .. py:method:: get_task_instances(composer_airflow_uri, composer_dag_id, query_parameters = None, timeout = None)

      Get the list of task instances for provided DAG.

      :param composer_airflow_uri: The URI of the Apache Airflow Web UI hosted within Composer environment.
      :param composer_dag_id: The ID of DAG.
      :query_parameters: Query parameters for this request.
      :param timeout: The timeout for this request.



.. py:class:: CloudComposerAsyncHook(**kwargs)

   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseAsyncHook`


   Hook for Google Cloud Composer async APIs.


   .. py:attribute:: sync_hook_class


   .. py:attribute:: client_options


   .. py:method:: get_environment_client()
      :async:


      Retrieve client library object that allow access Environments service.



   .. py:method:: make_composer_airflow_api_request(method, airflow_uri, path, data = None, timeout = None)
      :async:


      Make a request to Cloud Composer environment's web server.

      :param method: The request method to use ('GET', 'OPTIONS', 'HEAD', 'POST', 'PUT', 'PATCH', 'DELETE').
      :param airflow_uri: The URI of the Apache Airflow Web UI hosted within this environment.
      :param path: The path to send the request.
      :param data: Dictionary, list of tuples, bytes, or file-like object to send in the body of the request.
      :param timeout: The timeout for this request.



   .. py:method:: get_environment_name(project_id, region, environment_id)


   .. py:method:: get_parent(project_id, region)


   .. py:method:: get_operation(operation_name)
      :async:



   .. py:method:: create_environment(project_id, region, environment, retry = DEFAULT, timeout = None, metadata = ())
      :async:


      Create a new environment.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param region: Required. The ID of the Google Cloud region that the service belongs to.
      :param environment:  The environment to create. This corresponds to the ``environment`` field on the
          ``request`` instance; if ``request`` is provided, this should not be set.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: delete_environment(project_id, region, environment_id, retry = DEFAULT, timeout = None, metadata = ())
      :async:


      Delete an environment.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param region: Required. The ID of the Google Cloud region that the service belongs to.
      :param environment_id: Required. The ID of the Google Cloud environment that the service belongs to.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: update_environment(project_id, region, environment_id, environment, update_mask, retry = DEFAULT, timeout = None, metadata = ())
      :async:


      Update an environment.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param region: Required. The ID of the Google Cloud region that the service belongs to.
      :param environment_id: Required. The ID of the Google Cloud environment that the service belongs to.
      :param environment:  A patch environment. Fields specified by the ``updateMask`` will be copied from
          the patch environment into the environment under update.

          This corresponds to the ``environment`` field on the ``request`` instance; if ``request`` is
          provided, this should not be set.
      :param update_mask:  Required. A comma-separated list of paths, relative to ``Environment``, of fields
          to update. If a dict is provided, it must be of the same form as the protobuf message
          :class:`~google.protobuf.field_mask_pb2.FieldMask`
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: get_environment(project_id, region, environment_id, retry = DEFAULT, timeout = None, metadata = ())
      :async:


      Get an existing environment.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param region: Required. The ID of the Google Cloud region that the service belongs to.
      :param environment_id: Required. The ID of the Google Cloud environment that the service belongs to.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: execute_airflow_command(project_id, region, environment_id, command, subcommand, parameters, retry = DEFAULT, timeout = None, metadata = ())
      :async:


      Execute Airflow command for provided Composer environment.

      :param project_id: The ID of the Google Cloud project that the service belongs to.
      :param region: The ID of the Google Cloud region that the service belongs to.
      :param environment_id: The ID of the Google Cloud environment that the service belongs to.
      :param command: Airflow command.
      :param subcommand: Airflow subcommand.
      :param parameters: Parameters for the Airflow command/subcommand as an array of arguments. It may
          contain positional arguments like ``["my-dag-id"]``, key-value parameters like ``["--foo=bar"]``
          or ``["--foo","bar"]``, or other flags like ``["-f"]``.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: poll_airflow_command(project_id, region, environment_id, execution_id, pod, pod_namespace, next_line_number, retry = DEFAULT, timeout = None, metadata = ())
      :async:


      Poll Airflow command execution result for provided Composer environment.

      :param project_id: The ID of the Google Cloud project that the service belongs to.
      :param region: The ID of the Google Cloud region that the service belongs to.
      :param environment_id: The ID of the Google Cloud environment that the service belongs to.
      :param execution_id: The unique ID of the command execution.
      :param pod: The name of the pod where the command is executed.
      :param pod_namespace: The namespace of the pod where the command is executed.
      :param next_line_number: Line number from which new logs should be fetched.
      :param retry: Designation of what errors, if any, should be retried.
      :param timeout: The timeout for this request.
      :param metadata: Strings which should be sent along with the request as metadata.



   .. py:method:: wait_command_execution_result(project_id, region, environment_id, execution_cmd_info, retry = DEFAULT, timeout = None, metadata = (), poll_interval = 10)
      :async:



   .. py:method:: get_dag_runs(composer_airflow_uri, composer_dag_id, timeout = None)
      :async:


      Get the list of dag runs for provided DAG.

      :param composer_airflow_uri: The URI of the Apache Airflow Web UI hosted within Composer environment.
      :param composer_dag_id: The ID of DAG.
      :param timeout: The timeout for this request.



   .. py:method:: get_task_instances(composer_airflow_uri, composer_dag_id, query_parameters = None, timeout = None)
      :async:


      Get the list of task instances for provided DAG.

      :param composer_airflow_uri: The URI of the Apache Airflow Web UI hosted within Composer environment.
      :param composer_dag_id: The ID of DAG.
      :query_parameters: Query parameters for this request.
      :param timeout: The timeout for this request.



